<resources>
    <string name="country_item_adapter_description" formatted="false">(%1$s) %2$s</string>

    <string name="select_recipient_country_title">Select Recipient Country</string>

    <string name="recipient_info_title">Fill Recipient Info</string>
    <string name="recipient_info_phone_hint">Phone (%1$s)</string>
    <string name="recipient_info_phone_prefix">%1$s\u0020</string>
    <string name="recipient_info_first_name_hint">First Name</string>
    <string name="recipient_info_last_name_hint">Last Name</string>
    <string name="recipient_info_first_name_empty_error">* first name is empty</string>
    <string name="recipient_info_last_name_empty_error">* last name is empty</string>
    <string name="recipient_info_phone_not_valid_error">* phone must contain exactly %d numbers</string>
    <string name="recipient_info_continue_button">Continue</string>

    <string name="send_recipient_title">Send Binaria Value</string>
    <string name="send_recipient_usd_binary_hint">USD Binary</string>
    <string name="send_recipient_send_button">Send</string>
    <string name="send_recipient_send_description_text" formatted="false">The recipient %1$s from %2$s will receive `%3$s` (%4$s) Binary.</string>
    <string name="send_recipient_not_binary_error">Number is not binary.</string>
    <string name="send_recipient_something_went_wrong">Something is wrong, try again.</string>

    <string name="receipt_title">Receipt</string>
    <string name="receipt_subtitle">Thank you for send money with PenguinPay!</string>
    <string name="receipt_close_button">Close</string>
    <string name="receipt_recipient_name">Recipient Name</string>
    <string name="receipt_recipient_phone">Recipient Phone</string>
    <string name="receipt_recipient_sent">Sent Value</string>
    <string name="receipt_recipient_sent_value" formatted="false">%1$s (%2$s)</string>
</resources>
