<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:background="@color/colorPrimary"
    tools:context=".ui.receipt.ReceiptFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        style="@style/PenguinPay.TextView.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/receipt_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subtitle"
        style="@style/PenguinPay.TextView.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/receipt_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recipientNameTitle"
        style="@style/PenguinPay.TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/receipt_recipient_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recipientNameValue"
        style="@style/PenguinPay.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipientNameTitle"
        tools:text="Andre Tortolano" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recipientPhoneTitle"
        style="@style/PenguinPay.TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/receipt_recipient_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipientNameTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recipientPhoneValue"
        style="@style/PenguinPay.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipientPhoneTitle"
        tools:text="+55 12341234" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recipientSentTitle"
        style="@style/PenguinPay.TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/receipt_recipient_sent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipientPhoneTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recipientSentValue"
        style="@style/PenguinPay.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipientSentTitle"
        tools:text="10101010101010 (BRA)" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/closeButton"
        style="@style/PenguinPay.Button.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receipt_close_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>