<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:background="@color/colorPrimary"
    tools:context=".ui.send.SendRecipientFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        style="@style/PenguinPay.TextView.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/send_recipient_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usdBinaryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/send_recipient_usd_binary_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usdBinaruEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="01"
            android:maxLength="20" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sendDescription"
        style="@style/PenguinPay.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/send_recipient_send_description_text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usdBinaryLayout" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/loadingExchange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/usdBinaryLayout"
        app:layout_constraintEnd_toEndOf="@+id/usdBinaryLayout"
        app:layout_constraintStart_toStartOf="@+id/usdBinaryLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendButton"
        style="@style/PenguinPay.Button.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_recipient_send_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>